Completed: config.path_of_data replaced with data_path()

--- a/src/PreProcessing/gap_analysing/gap_injection.ipynb
+++ b/src/PreProcessing/gap_analysing/gap_injection.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-03T14:34:32.026062Z",
-     "start_time": "2024-10-03T14:34:28.015881Z"
+     "end_time": "2024-10-03T15:50:01.785403Z",
+     "start_time": "2024-10-03T15:49:58.494110Z"
     }
    },
    "source": [
@@ -27,7 +27,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[92mDEBUG@\u001B[94m10-03.18:04:32:\u001B[92m...Starting\n"
+      "\u001B[92mDEBUG@\u001B[94m10-03.19:20:01:\u001B[92m...Starting\n"
      ]
     }
    ],
@@ -44,7 +44,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-03T14:58:24.968178Z",
+     "end_time": "2024-10-03T15:49:57.356616Z",
      "start_time": "2024-10-03T14:58:21.409152Z"
     }
    },
@@ -245,7 +245,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-03T15:07:46.399930Z",
+     "end_time": "2024-10-03T15:49:57.358613500Z",
      "start_time": "2024-10-03T15:07:46.359424Z"
     }
    },
@@ -273,7 +273,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-03T15:09:50.110948Z",
+     "end_time": "2024-10-03T15:49:57.359613300Z",
      "start_time": "2024-10-03T15:09:50.071185Z"
     }
    },
@@ -470,7 +470,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-03T15:09:50.191838Z",
+     "end_time": "2024-10-03T15:49:57.365609Z",
      "start_time": "2024-10-03T15:09:50.178492Z"
     }
    },
@@ -502,7 +502,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-03T15:09:50.416930Z",
+     "end_time": "2024-10-03T15:49:57.367608300Z",
      "start_time": "2024-10-03T15:09:50.379569Z"
     }
    },
@@ -831,7 +831,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-03T15:09:50.625187Z",
+     "end_time": "2024-10-03T15:49:57.369606600Z",
      "start_time": "2024-10-03T15:09:50.601816Z"
     }
    },
@@ -1025,7 +1025,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-03T15:09:52.202720Z",
+     "end_time": "2024-10-03T15:49:57.372604900Z",
      "start_time": "2024-10-03T15:09:50.739630Z"
     }
    },
@@ -1220,6 +1220,260 @@
     }
    ],
    "execution_count": 41
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-03T15:49:57.373605Z",
+     "start_time": "2024-10-03T15:31:27.374181Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "gapped_n_mt_ohlcv.set_index(['timeframe', 'date'], drop=True, inplace=True)\n",
+    "gapped_n_mt_ohlcv"
+   ],
+   "id": "e73cbb501cb797b7",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                                         open     close      high       low  \\\n",
+       "timeframe date                                                                \n",
+       "1min      2024-05-20 00:01:00+00:00 -0.167760 -0.565577 -0.343654 -0.357794   \n",
+       "          2024-05-20 00:02:00+00:00 -0.507036 -0.611986 -0.654449 -0.479779   \n",
+       "          2024-05-20 00:03:00+00:00 -0.723255 -1.421020 -0.531388 -1.244801   \n",
+       "          2024-05-20 00:04:00+00:00 -1.398959 -0.977134 -1.174035 -1.022799   \n",
+       "          2024-05-20 00:05:00+00:00 -0.962370 -0.513302 -0.741274 -0.704919   \n",
+       "...                                       ...       ...       ...       ...   \n",
+       "1D        2024-09-01 00:00:00+00:00 -0.684385 -1.265078 -1.114403 -0.900461   \n",
+       "1h        2024-09-01 00:00:00+00:00 -0.081138 -0.165222 -0.038223 -0.001254   \n",
+       "1min      2024-09-01 00:00:00+00:00 -0.018025 -0.275889 -0.122945 -0.169871   \n",
+       "4h        2024-09-01 00:00:00+00:00 -0.116954 -0.577484 -0.395726 -0.480249   \n",
+       "5min      2024-09-01 00:00:00+00:00  0.019726  0.277921  0.054425  0.034553   \n",
+       "\n",
+       "                                       volume  \n",
+       "timeframe date                                 \n",
+       "1min      2024-05-20 00:01:00+00:00 -0.030649  \n",
+       "          2024-05-20 00:02:00+00:00  0.176402  \n",
+       "          2024-05-20 00:03:00+00:00  0.310774  \n",
+       "          2024-05-20 00:04:00+00:00 -0.218426  \n",
+       "          2024-05-20 00:05:00+00:00 -0.271016  \n",
+       "...                                       ...  \n",
+       "1D        2024-09-01 00:00:00+00:00  0.298451  \n",
+       "1h        2024-09-01 00:00:00+00:00 -0.095335  \n",
+       "1min      2024-09-01 00:00:00+00:00 -0.171993  \n",
+       "4h        2024-09-01 00:00:00+00:00  0.044290  \n",
+       "5min      2024-09-01 00:00:00+00:00 -0.011040  \n",
+       "\n",
+       "[70164 rows x 5 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>open</th>\n",
+       "      <th>close</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>timeframe</th>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">1min</th>\n",
+       "      <th>2024-05-20 00:01:00+00:00</th>\n",
+       "      <td>-0.167760</td>\n",
+       "      <td>-0.565577</td>\n",
+       "      <td>-0.343654</td>\n",
+       "      <td>-0.357794</td>\n",
+       "      <td>-0.030649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-05-20 00:02:00+00:00</th>\n",
+       "      <td>-0.507036</td>\n",
+       "      <td>-0.611986</td>\n",
+       "      <td>-0.654449</td>\n",
+       "      <td>-0.479779</td>\n",
+       "      <td>0.176402</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-05-20 00:03:00+00:00</th>\n",
+       "      <td>-0.723255</td>\n",
+       "      <td>-1.421020</td>\n",
+       "      <td>-0.531388</td>\n",
+       "      <td>-1.244801</td>\n",
+       "      <td>0.310774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-05-20 00:04:00+00:00</th>\n",
+       "      <td>-1.398959</td>\n",
+       "      <td>-0.977134</td>\n",
+       "      <td>-1.174035</td>\n",
+       "      <td>-1.022799</td>\n",
+       "      <td>-0.218426</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-05-20 00:05:00+00:00</th>\n",
+       "      <td>-0.962370</td>\n",
+       "      <td>-0.513302</td>\n",
+       "      <td>-0.741274</td>\n",
+       "      <td>-0.704919</td>\n",
+       "      <td>-0.271016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1D</th>\n",
+       "      <th>2024-09-01 00:00:00+00:00</th>\n",
+       "      <td>-0.684385</td>\n",
+       "      <td>-1.265078</td>\n",
+       "      <td>-1.114403</td>\n",
+       "      <td>-0.900461</td>\n",
+       "      <td>0.298451</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1h</th>\n",
+       "      <th>2024-09-01 00:00:00+00:00</th>\n",
+       "      <td>-0.081138</td>\n",
+       "      <td>-0.165222</td>\n",
+       "      <td>-0.038223</td>\n",
+       "      <td>-0.001254</td>\n",
+       "      <td>-0.095335</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1min</th>\n",
+       "      <th>2024-09-01 00:00:00+00:00</th>\n",
+       "      <td>-0.018025</td>\n",
+       "      <td>-0.275889</td>\n",
+       "      <td>-0.122945</td>\n",
+       "      <td>-0.169871</td>\n",
+       "      <td>-0.171993</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4h</th>\n",
+       "      <th>2024-09-01 00:00:00+00:00</th>\n",
+       "      <td>-0.116954</td>\n",
+       "      <td>-0.577484</td>\n",
+       "      <td>-0.395726</td>\n",
+       "      <td>-0.480249</td>\n",
+       "      <td>0.044290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5min</th>\n",
+       "      <th>2024-09-01 00:00:00+00:00</th>\n",
+       "      <td>0.019726</td>\n",
+       "      <td>0.277921</td>\n",
+       "      <td>0.054425</td>\n",
+       "      <td>0.034553</td>\n",
+       "      <td>-0.011040</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>70164 rows × 5 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 43
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-03T15:49:57.375602800Z",
+     "start_time": "2024-10-03T15:34:08.727702Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "gapped_n_mt_ohlcv.index.names\n",
+   "id": "c824b80ec5fd4d96",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FrozenList(['timeframe', 'date'])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 44
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-03T15:49:57.376601800Z",
+     "start_time": "2024-10-03T15:49:40.656708Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from PreProcessing.gap_analysing.gap_analyser import single_timeframe_find_gap\n",
+    "for timeframe in gapped_n_mt_ohlcv.index.get_level_values(level='timeframe').unique():\n",
+    "    gapped_n_ohlcv = single_timeframe(gapped_n_mt_ohlcv, timeframe)\n",
+    "    gaps_count = single_timeframe_find_gap(gapped_n_ohlcv, timeframe, mode='count')\n",
+    "    gaps_list = single_timeframe_find_gap(gapped_n_ohlcv, timeframe, mode='list')\n",
+    "    found_gaps = single_timeframe_find_gap(gapped_n_ohlcv, timeframe)\n",
+    "    assert gaps_count == len(gaps_list)\n",
+    "    if not found_gaps:\n",
+    "        assert gaps_count == 0\n",
+    "    print(f\"found {gaps_count} gaps: {gaps_list}\")\n",
+    "\n",
+    "    "
+   ],
+   "id": "98dfb1b12d3db671",
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "single_timeframe_find_gap() got an unexpected keyword argument 'mode'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[51], line 4\u001B[0m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m timeframe \u001B[38;5;129;01min\u001B[39;00m gapped_n_mt_ohlcv\u001B[38;5;241m.\u001B[39mindex\u001B[38;5;241m.\u001B[39mget_level_values(level\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mtimeframe\u001B[39m\u001B[38;5;124m'\u001B[39m)\u001B[38;5;241m.\u001B[39munique():\n\u001B[0;32m      3\u001B[0m     gapped_n_ohlcv \u001B[38;5;241m=\u001B[39m single_timeframe(gapped_n_mt_ohlcv, timeframe)\n\u001B[1;32m----> 4\u001B[0m     gaps_count \u001B[38;5;241m=\u001B[39m \u001B[43msingle_timeframe_find_gap\u001B[49m\u001B[43m(\u001B[49m\u001B[43mgapped_n_ohlcv\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtimeframe\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mmode\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mcount\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m      5\u001B[0m     gaps_list \u001B[38;5;241m=\u001B[39m single_timeframe_find_gap(gapped_n_ohlcv, timeframe, mode\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mlist\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m      6\u001B[0m     found_gaps \u001B[38;5;241m=\u001B[39m single_timeframe_find_gap(gapped_n_ohlcv, timeframe)\n",
+      "\u001B[1;31mTypeError\u001B[0m: single_timeframe_find_gap() got an unexpected keyword argument 'mode'"
+     ]
+    }
+   ],
+   "execution_count": 51
   }
  ],
  "metadata": {
