--- a/src/PreProcessing/gap_analysing/gap_injection.ipynb
+++ b/src/PreProcessing/gap_analysing/gap_injection.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-03T15:50:01.785403Z",
-     "start_time": "2024-10-03T15:49:58.494110Z"
+     "end_time": "2024-10-03T15:51:00.919540Z",
+     "start_time": "2024-10-03T15:51:00.913788Z"
     }
    },
    "source": [
@@ -22,30 +22,14 @@
     "from helper.data_preparation import single_timeframe\n",
     "from helper.helper import date_range_to_string"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001B[92mDEBUG@\u001B[94m10-03.19:20:01:\u001B[92m...Starting\n"
-     ]
-    }
-   ],
-   "execution_count": 1
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
    "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "18400cd2b77c1a79"
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-03T15:49:57.356616Z",
-     "start_time": "2024-10-03T14:58:21.409152Z"
+     "end_time": "2024-10-03T15:51:05.423900Z",
+     "start_time": "2024-10-03T15:51:01.027249Z"
     }
    },
    "cell_type": "code",
@@ -235,18 +219,18 @@
        "</div>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 29
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-03T15:49:57.358613500Z",
-     "start_time": "2024-10-03T15:07:46.359424Z"
+     "end_time": "2024-10-03T15:51:05.545826Z",
+     "start_time": "2024-10-03T15:51:05.510826Z"
     }
    },
    "cell_type": "code",
@@ -263,18 +247,18 @@
        "Timestamp('2024-05-20 00:00:00+0000', tz='UTC')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 34
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-03T15:49:57.359613300Z",
-     "start_time": "2024-10-03T15:09:50.071185Z"
+     "end_time": "2024-10-03T15:51:05.893490Z",
+     "start_time": "2024-10-03T15:51:05.849276Z"
     }
    },
    "cell_type": "code",
@@ -460,18 +444,18 @@
        "</div>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 37
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-03T15:49:57.365609Z",
-     "start_time": "2024-10-03T15:09:50.178492Z"
+     "end_time": "2024-10-03T15:51:06.178346Z",
+     "start_time": "2024-10-03T15:51:06.165786Z"
     }
    },
    "cell_type": "code",
@@ -492,18 +476,18 @@
        " 149759.0)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 38
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-03T15:49:57.367608300Z",
-     "start_time": "2024-10-03T15:09:50.379569Z"
+     "end_time": "2024-10-03T15:51:06.331275Z",
+     "start_time": "2024-10-03T15:51:06.306136Z"
     }
    },
    "cell_type": "code",
@@ -821,18 +805,18 @@
        "  datetime.timedelta(days=1, seconds=48375, microseconds=701791))]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 39
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-03T15:49:57.369606600Z",
-     "start_time": "2024-10-03T15:09:50.601816Z"
+     "end_time": "2024-10-03T15:51:06.552069Z",
+     "start_time": "2024-10-03T15:51:06.528136Z"
     }
    },
    "cell_type": "code",
@@ -1015,18 +999,18 @@
        "</div>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 40
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-03T15:49:57.372604900Z",
-     "start_time": "2024-10-03T15:09:50.739630Z"
+     "end_time": "2024-10-03T15:51:08.125606Z",
+     "start_time": "2024-10-03T15:51:06.758940Z"
     }
    },
    "cell_type": "code",
@@ -1214,18 +1198,18 @@
        "</div>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 41
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-03T15:49:57.373605Z",
-     "start_time": "2024-10-03T15:31:27.374181Z"
+     "end_time": "2024-10-03T15:51:08.264321Z",
+     "start_time": "2024-10-03T15:51:08.221966Z"
     }
    },
    "cell_type": "code",
@@ -1406,18 +1390,18 @@
        "</div>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 43
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-03T15:49:57.375602800Z",
-     "start_time": "2024-10-03T15:34:08.727702Z"
+     "end_time": "2024-10-03T15:51:08.650559Z",
+     "start_time": "2024-10-03T15:51:08.637331Z"
     }
    },
    "cell_type": "code",
@@ -1430,18 +1414,18 @@
        "FrozenList(['timeframe', 'date'])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 44
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-03T15:49:57.376601800Z",
-     "start_time": "2024-10-03T15:49:40.656708Z"
+     "end_time": "2024-10-03T15:51:30.963196Z",
+     "start_time": "2024-10-03T15:51:29.924239Z"
     }
    },
    "cell_type": "code",
@@ -1455,25 +1439,117 @@
     "    assert gaps_count == len(gaps_list)\n",
     "    if not found_gaps:\n",
     "        assert gaps_count == 0\n",
-    "    print(f\"found {gaps_count} gaps: {gaps_list}\")\n",
+    "    print(f\"timeframe:{timeframe} found {gaps_count} gaps: {gaps_list}\")\n",
     "\n",
     "    "
    ],
    "id": "98dfb1b12d3db671",
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "single_timeframe_find_gap() got an unexpected keyword argument 'mode'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[51], line 4\u001B[0m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m timeframe \u001B[38;5;129;01min\u001B[39;00m gapped_n_mt_ohlcv\u001B[38;5;241m.\u001B[39mindex\u001B[38;5;241m.\u001B[39mget_level_values(level\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mtimeframe\u001B[39m\u001B[38;5;124m'\u001B[39m)\u001B[38;5;241m.\u001B[39munique():\n\u001B[0;32m      3\u001B[0m     gapped_n_ohlcv \u001B[38;5;241m=\u001B[39m single_timeframe(gapped_n_mt_ohlcv, timeframe)\n\u001B[1;32m----> 4\u001B[0m     gaps_count \u001B[38;5;241m=\u001B[39m \u001B[43msingle_timeframe_find_gap\u001B[49m\u001B[43m(\u001B[49m\u001B[43mgapped_n_ohlcv\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtimeframe\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mmode\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mcount\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m      5\u001B[0m     gaps_list \u001B[38;5;241m=\u001B[39m single_timeframe_find_gap(gapped_n_ohlcv, timeframe, mode\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mlist\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m      6\u001B[0m     found_gaps \u001B[38;5;241m=\u001B[39m single_timeframe_find_gap(gapped_n_ohlcv, timeframe)\n",
-      "\u001B[1;31mTypeError\u001B[0m: single_timeframe_find_gap() got an unexpected keyword argument 'mode'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "timeframe:1min found 95294 gaps: DatetimeIndex(['2024-05-20 13:33:00+00:00', '2024-05-20 13:34:00+00:00',\n",
+      "               '2024-05-20 13:35:00+00:00', '2024-05-20 13:36:00+00:00',\n",
+      "               '2024-05-20 13:37:00+00:00', '2024-05-20 13:38:00+00:00',\n",
+      "               '2024-05-20 13:39:00+00:00', '2024-05-20 13:40:00+00:00',\n",
+      "               '2024-05-20 13:41:00+00:00', '2024-05-20 13:42:00+00:00',\n",
+      "               ...\n",
+      "               '2024-08-29 20:07:00+00:00', '2024-08-29 20:08:00+00:00',\n",
+      "               '2024-08-29 20:09:00+00:00', '2024-08-29 20:10:00+00:00',\n",
+      "               '2024-08-29 20:11:00+00:00', '2024-08-29 20:12:00+00:00',\n",
+      "               '2024-08-29 20:13:00+00:00', '2024-08-29 20:14:00+00:00',\n",
+      "               '2024-08-29 20:15:00+00:00', '2024-08-29 20:16:00+00:00'],\n",
+      "              dtype='datetime64[ns, UTC]', length=95294, freq=None)\n",
+      "timeframe:5min found 19060 gaps: DatetimeIndex(['2024-05-20 13:35:00+00:00', '2024-05-20 13:40:00+00:00',\n",
+      "               '2024-05-20 13:45:00+00:00', '2024-05-20 13:50:00+00:00',\n",
+      "               '2024-05-20 13:55:00+00:00', '2024-05-20 14:00:00+00:00',\n",
+      "               '2024-05-20 14:05:00+00:00', '2024-05-20 14:10:00+00:00',\n",
+      "               '2024-05-20 14:15:00+00:00', '2024-05-20 14:20:00+00:00',\n",
+      "               ...\n",
+      "               '2024-08-29 19:30:00+00:00', '2024-08-29 19:35:00+00:00',\n",
+      "               '2024-08-29 19:40:00+00:00', '2024-08-29 19:45:00+00:00',\n",
+      "               '2024-08-29 19:50:00+00:00', '2024-08-29 19:55:00+00:00',\n",
+      "               '2024-08-29 20:00:00+00:00', '2024-08-29 20:05:00+00:00',\n",
+      "               '2024-08-29 20:10:00+00:00', '2024-08-29 20:15:00+00:00'],\n",
+      "              dtype='datetime64[ns, UTC]', length=19060, freq=None)\n",
+      "timeframe:15min found 6351 gaps: DatetimeIndex(['2024-05-20 13:45:00+00:00', '2024-05-20 14:00:00+00:00',\n",
+      "               '2024-05-20 14:15:00+00:00', '2024-05-20 14:30:00+00:00',\n",
+      "               '2024-05-20 14:45:00+00:00', '2024-05-20 15:00:00+00:00',\n",
+      "               '2024-05-20 15:15:00+00:00', '2024-05-20 15:30:00+00:00',\n",
+      "               '2024-05-20 15:45:00+00:00', '2024-05-20 16:00:00+00:00',\n",
+      "               ...\n",
+      "               '2024-08-29 18:00:00+00:00', '2024-08-29 18:15:00+00:00',\n",
+      "               '2024-08-29 18:30:00+00:00', '2024-08-29 18:45:00+00:00',\n",
+      "               '2024-08-29 19:00:00+00:00', '2024-08-29 19:15:00+00:00',\n",
+      "               '2024-08-29 19:30:00+00:00', '2024-08-29 19:45:00+00:00',\n",
+      "               '2024-08-29 20:00:00+00:00', '2024-08-29 20:15:00+00:00'],\n",
+      "              dtype='datetime64[ns, UTC]', length=6351, freq=None)\n",
+      "timeframe:1h found 1592 gaps: DatetimeIndex(['2024-05-20 14:00:00+00:00', '2024-05-20 15:00:00+00:00',\n",
+      "               '2024-05-20 16:00:00+00:00', '2024-05-20 17:00:00+00:00',\n",
+      "               '2024-05-20 18:00:00+00:00', '2024-05-20 19:00:00+00:00',\n",
+      "               '2024-05-20 20:00:00+00:00', '2024-05-20 21:00:00+00:00',\n",
+      "               '2024-05-20 22:00:00+00:00', '2024-05-20 23:00:00+00:00',\n",
+      "               ...\n",
+      "               '2024-08-29 11:00:00+00:00', '2024-08-29 12:00:00+00:00',\n",
+      "               '2024-08-29 13:00:00+00:00', '2024-08-29 14:00:00+00:00',\n",
+      "               '2024-08-29 15:00:00+00:00', '2024-08-29 16:00:00+00:00',\n",
+      "               '2024-08-29 17:00:00+00:00', '2024-08-29 18:00:00+00:00',\n",
+      "               '2024-08-29 19:00:00+00:00', '2024-08-29 20:00:00+00:00'],\n",
+      "              dtype='datetime64[ns, UTC]', length=1592, freq=None)\n",
+      "timeframe:4h found 398 gaps: DatetimeIndex(['2024-05-20 16:00:00+00:00', '2024-05-20 20:00:00+00:00',\n",
+      "               '2024-05-21 00:00:00+00:00', '2024-05-21 04:00:00+00:00',\n",
+      "               '2024-05-21 08:00:00+00:00', '2024-05-21 12:00:00+00:00',\n",
+      "               '2024-05-22 04:00:00+00:00', '2024-05-22 08:00:00+00:00',\n",
+      "               '2024-05-22 12:00:00+00:00', '2024-05-22 16:00:00+00:00',\n",
+      "               ...\n",
+      "               '2024-08-28 08:00:00+00:00', '2024-08-28 12:00:00+00:00',\n",
+      "               '2024-08-28 16:00:00+00:00', '2024-08-28 20:00:00+00:00',\n",
+      "               '2024-08-29 00:00:00+00:00', '2024-08-29 04:00:00+00:00',\n",
+      "               '2024-08-29 08:00:00+00:00', '2024-08-29 12:00:00+00:00',\n",
+      "               '2024-08-29 16:00:00+00:00', '2024-08-29 20:00:00+00:00'],\n",
+      "              dtype='datetime64[ns, UTC]', length=398, freq=None)\n",
+      "timeframe:1D found 64 gaps: DatetimeIndex(['2024-05-23 00:00:00+00:00', '2024-05-24 00:00:00+00:00',\n",
+      "               '2024-05-25 00:00:00+00:00', '2024-05-26 00:00:00+00:00',\n",
+      "               '2024-05-27 00:00:00+00:00', '2024-05-28 00:00:00+00:00',\n",
+      "               '2024-05-30 00:00:00+00:00', '2024-05-31 00:00:00+00:00',\n",
+      "               '2024-06-01 00:00:00+00:00', '2024-06-02 00:00:00+00:00',\n",
+      "               '2024-06-03 00:00:00+00:00', '2024-06-04 00:00:00+00:00',\n",
+      "               '2024-06-05 00:00:00+00:00', '2024-06-06 00:00:00+00:00',\n",
+      "               '2024-06-08 00:00:00+00:00', '2024-06-09 00:00:00+00:00',\n",
+      "               '2024-06-10 00:00:00+00:00', '2024-06-11 00:00:00+00:00',\n",
+      "               '2024-06-12 00:00:00+00:00', '2024-06-17 00:00:00+00:00',\n",
+      "               '2024-06-19 00:00:00+00:00', '2024-06-21 00:00:00+00:00',\n",
+      "               '2024-06-22 00:00:00+00:00', '2024-06-23 00:00:00+00:00',\n",
+      "               '2024-06-24 00:00:00+00:00', '2024-06-26 00:00:00+00:00',\n",
+      "               '2024-06-27 00:00:00+00:00', '2024-06-29 00:00:00+00:00',\n",
+      "               '2024-07-03 00:00:00+00:00', '2024-07-04 00:00:00+00:00',\n",
+      "               '2024-07-05 00:00:00+00:00', '2024-07-10 00:00:00+00:00',\n",
+      "               '2024-07-12 00:00:00+00:00', '2024-07-13 00:00:00+00:00',\n",
+      "               '2024-07-15 00:00:00+00:00', '2024-07-16 00:00:00+00:00',\n",
+      "               '2024-07-17 00:00:00+00:00', '2024-07-20 00:00:00+00:00',\n",
+      "               '2024-07-21 00:00:00+00:00', '2024-07-22 00:00:00+00:00',\n",
+      "               '2024-07-23 00:00:00+00:00', '2024-07-25 00:00:00+00:00',\n",
+      "               '2024-07-29 00:00:00+00:00', '2024-08-01 00:00:00+00:00',\n",
+      "               '2024-08-02 00:00:00+00:00', '2024-08-03 00:00:00+00:00',\n",
+      "               '2024-08-04 00:00:00+00:00', '2024-08-06 00:00:00+00:00',\n",
+      "               '2024-08-07 00:00:00+00:00', '2024-08-08 00:00:00+00:00',\n",
+      "               '2024-08-10 00:00:00+00:00', '2024-08-11 00:00:00+00:00',\n",
+      "               '2024-08-13 00:00:00+00:00', '2024-08-14 00:00:00+00:00',\n",
+      "               '2024-08-17 00:00:00+00:00', '2024-08-19 00:00:00+00:00',\n",
+      "               '2024-08-20 00:00:00+00:00', '2024-08-21 00:00:00+00:00',\n",
+      "               '2024-08-24 00:00:00+00:00', '2024-08-25 00:00:00+00:00',\n",
+      "               '2024-08-26 00:00:00+00:00', '2024-08-27 00:00:00+00:00',\n",
+      "               '2024-08-28 00:00:00+00:00', '2024-08-29 00:00:00+00:00'],\n",
+      "              dtype='datetime64[ns, UTC]', freq=None)\n",
+      "timeframe:1W found 6 gaps: DatetimeIndex(['2024-07-07 00:00:00+00:00', '2024-07-14 00:00:00+00:00',\n",
+      "               '2024-07-21 00:00:00+00:00', '2024-07-28 00:00:00+00:00',\n",
+      "               '2024-08-04 00:00:00+00:00', '2024-08-11 00:00:00+00:00'],\n",
+      "              dtype='datetime64[ns, UTC]', freq='W-SUN')\n"
      ]
     }
    ],
-   "execution_count": 51
+   "execution_count": 13
   }
  ],
  "metadata": {
