Completed: config.path_of_data replaced with data_path()

--- a/src/ai_modelling/cnn_lstd_model.ipynb
+++ b/src/ai_modelling/cnn_lstd_model.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-10T10:59:56.119701Z",
-     "start_time": "2024-10-10T10:59:54.032822Z"
+     "end_time": "2024-10-10T12:52:52.580363Z",
+     "start_time": "2024-10-10T12:52:51.617795Z"
     }
    },
    "cell_type": "code",
@@ -28,13 +28,6 @@
    ],
    "id": "9caca9023e737e7f",
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001B[92mDEBUG@\u001B[94m10-10.14:29:55:\u001B[92m...Starting\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -211,18 +204,18 @@
        "</div>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-10T10:53:34.207305Z",
-     "start_time": "2024-10-10T10:53:34.024997Z"
+     "end_time": "2024-10-10T12:52:52.878607Z",
+     "start_time": "2024-10-10T12:52:52.662031Z"
     }
    },
    "cell_type": "code",
@@ -348,12 +341,12 @@
        "</div>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -377,15 +370,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-10T10:57:19.905898Z",
-     "start_time": "2024-10-10T10:57:19.788991Z"
+     "end_time": "2024-10-10T13:06:35.829774Z",
+     "start_time": "2024-10-10T13:06:35.643664Z"
     }
    },
    "cell_type": "code",
    "source": [
     "\n",
     "from tensorflow.python.keras.models import Model\n",
-    "from tensorflow.python.keras.layers import Conv1D, LeakyReLU, Flatten, LSTM, Dense, Concatenate\n",
+    "from tensorflow.python.keras.layers import Conv1D, LeakyReLU, Flatten, Dense, Concatenate\n",
     "from tensorflow.python.keras import Input\n",
     "import tensorflow as tf\n",
     "\n",
@@ -457,12 +450,12 @@
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[1;31mImportError\u001B[0m                               Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[16], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mtensorflow\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpython\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mkeras\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mmodels\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m Model\n\u001B[1;32m----> 2\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mtensorflow\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpython\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mkeras\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mlayers\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m Conv1D, LeakyReLU, Flatten, LSTM, Dense\n\u001B[0;32m      3\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mtensorflow\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpython\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mkeras\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m Input\n\u001B[0;32m      4\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mtensorflow\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mtf\u001B[39;00m\n",
+      "Cell \u001B[1;32mIn[9], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mtensorflow\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpython\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mkeras\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mmodels\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m Model\n\u001B[1;32m----> 2\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mtensorflow\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpython\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mkeras\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mlayers\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m Conv1D, LeakyReLU, Flatten, LSTM, Dense, Concatenate\n\u001B[0;32m      3\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mtensorflow\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpython\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mkeras\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m Input\n\u001B[0;32m      4\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mtensorflow\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mtf\u001B[39;00m\n",
       "\u001B[1;31mImportError\u001B[0m: cannot import name 'LSTM' from 'tensorflow.python.keras.layers' (C:\\Code\\dl-forcasting\\venv\\Lib\\site-packages\\tensorflow\\python\\keras\\layers\\__init__.py)"
      ]
     }
    ],
-   "execution_count": 16
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -526,7 +519,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-10T10:53:34.614949900Z",
+     "end_time": "2024-10-10T12:53:02.313921100Z",
      "start_time": "2024-10-10T10:43:48.292527Z"
     }
    },
@@ -720,7 +713,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-10T10:53:34.636586400Z",
+     "end_time": "2024-10-10T12:53:02.313921100Z",
      "start_time": "2024-10-10T10:51:21.695642Z"
     }
    },
