Completed: config.path_of_data replaced with data_path()

--- a/src/ai_modelling/cnn_lstd_model.ipynb
+++ b/src/ai_modelling/cnn_lstd_model.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-12T15:31:47.611701Z",
-     "start_time": "2024-10-12T15:31:42.824119Z"
+     "end_time": "2024-10-17T16:05:41.289521Z",
+     "start_time": "2024-10-17T16:05:15.048657Z"
     }
    },
    "cell_type": "code",
@@ -13,11 +13,8 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "from FigurePlotter.plotter import show_and_save_plot\n",
-    "from PanderaDFM.OHLCV import MultiTimeframeOHLCV\n",
-    "from helper.data_preparation import single_timeframe\n",
-    "from helper.helper import date_range_to_string\n",
     "from Config import config\n",
+    "from helper.helper import date_range_to_string\n",
     "\n",
     "config.processing_date_range = date_range_to_string(start=pd.to_datetime('03-01-24'),\n",
     "                                                    end=pd.to_datetime('09-01-24'))\n",
@@ -30,6 +27,13 @@
    ],
    "id": "9caca9023e737e7f",
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001B[92mDEBUG@\u001B[94m10-17.19:35:23:\u001B[92m...Starting\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -44,18 +48,18 @@
        " dtype: object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-12T15:32:05.255218Z",
-     "start_time": "2024-10-12T15:32:05.070246Z"
+     "end_time": "2024-10-17T16:05:42.182145Z",
+     "start_time": "2024-10-17T16:05:41.514582Z"
     }
    },
    "cell_type": "code",
@@ -181,12 +185,12 @@
        "</div>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -210,80 +214,18 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-12T15:32:10.169024Z",
-     "start_time": "2024-10-12T15:32:10.152511Z"
+     "end_time": "2024-10-17T16:06:15.619624Z",
+     "start_time": "2024-10-17T16:05:44.316292Z"
     }
    },
    "cell_type": "code",
    "source": [
     "\n",
-    "from tensorflow.python.keras.models import Model\n",
-    "from tensorflow.python.keras.layers import Conv1D, LeakyReLU, Flatten, Dense, Concatenate\n",
-    "from tensorflow.python.keras import Input\n",
-    "import tensorflow as tf\n",
-    "\n",
-    "model_input_lengths = {\n",
-    "    'structure': 128,\n",
-    "    'pattern': 256,\n",
-    "    'trigger': 256,\n",
-    "    'double': 256,\n",
-    "}\n",
-    "\n",
-    "\n",
-    "def create_cnn_lstm(input_shape, name_prefix):\n",
-    "    input_layer = Input(shape=input_shape)\n",
-    "\n",
-    "    # CNN Layer with ReLU activation\n",
-    "    conv = Conv1D(filters=64, kernel_size=3, padding='same')(input_layer)\n",
-    "    conv = LeakyReLU()(conv)\n",
-    "    conv = Conv1D(filters=64, kernel_size=3, padding='same')(conv)\n",
-    "    conv = LeakyReLU()(conv)\n",
-    "\n",
-    "    # Flatten the CNN output\n",
-    "    flatten = Flatten()(conv)\n",
-    "\n",
-    "    # LSTM Layer (LSTM has built-in activations)\n",
-    "    lstm = LSTM(64, return_sequences=False)(tf.expand_dims(flatten, axis=1))\n",
-    "\n",
-    "    # Fully connected layer with ReLU activation\n",
-    "    dense = Dense(64)(lstm)\n",
-    "    dense = LeakyReLU()(dense)\n",
-    "\n",
-    "    return Model(inputs=input_layer, outputs=dense)\n",
-    "\n",
-    "\n",
-    "def build_model(input_shapes):\n",
-    "    structure_model = create_cnn_lstm((model_input_lengths['structure'], 5), 'structure_model')\n",
-    "    pattern_model = create_cnn_lstm((model_input_lengths['pattern'], 5), 'pattern_model')\n",
-    "    trigger_model = create_cnn_lstm((model_input_lengths['trigger'], 5), 'trigger_model')\n",
-    "    double_model = create_cnn_lstm((model_input_lengths['double'], 5), 'double_model')\n",
-    "\n",
-    "    combined_output = Concatenate()(\n",
-    "        [structure_model.output, pattern_model.output, trigger_model.output, double_model.output])\n",
-    "\n",
-    "    # Add an additional Dense layer with ReLU activation\n",
-    "    combined_dense = Dense(128)(combined_output)\n",
-    "    combined_dense = LeakyReLU()(combined_dense)\n",
-    "\n",
-    "    # Final output layer (for regression tasks, use linear activation; for classification, consider sigmoid/softmax)\n",
-    "    final_output = Dense(1, activation='linear')(combined_dense)\n",
-    "\n",
-    "    # Define the final model\n",
-    "    model = Model(inputs=[structure_model.input, pattern_model.input, trigger_model.input, double_model.input],\n",
-    "                  outputs=final_output)\n",
-    "\n",
-    "    # Compile the model with mean squared error loss for regression tasks\n",
-    "    model.compile(optimizer='adam', loss='mse')\n",
-    "\n",
-    "    # Model summary\n",
-    "    model.summary()\n",
-    "\n",
-    "    return model\n",
     "\n"
    ],
    "id": "a1f1715472a3fc2b",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -298,69 +240,50 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-12T15:32:10.194325Z",
-     "start_time": "2024-10-12T15:32:10.183021Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "from tensorflow.python.keras.models import load_model\n",
-    "\n",
-    "\n",
-    "def train_model(structure_data, pattern_data, trigger_data, double_data, target_data, input_shapes, model=None):\n",
-    "    '''\n",
-    "    Check if the model is already trained or partially trained. If not, build a new model. \n",
-    "    Continue training the model and save the trained model to 'cnn_lstm_model.h5' after each session.\n",
-    "\n",
-    "    Args:\n",
-    "        structure_data: Data for the structure timeframe.\n",
-    "        pattern_data: Data for the pattern timeframe.\n",
-    "        trigger_data: Data for the trigger timeframe.\n",
-    "        double_data: Data for the double timeframe.\n",
-    "        target_data: The labels or target values for training.\n",
-    "        input_shapes: A dictionary containing the input shapes for structure, pattern, trigger, and double timeframe data.\n",
-    "    Returns:\n",
-    "        The trained model.\n",
-    "    '''\n",
-    "    # Check if the model already exists, load if it does\n",
-    "    model_path = 'cnn_lstm_model.h5'\n",
-    "\n",
-    "    if model is None:\n",
-    "        if os.path.exists(model_path):\n",
-    "            print(\"Loading existing model from disk...\")\n",
-    "            model = load_model(model_path)\n",
-    "        else:\n",
-    "            print(\"Building new model...\")\n",
-    "            model = build_model(input_shapes)\n",
-    "\n",
-    "    # Train the model\n",
-    "    history = model.fit([structure_data, pattern_data, trigger_data, double_data],\n",
-    "                        target_data,\n",
-    "                        epochs=10,\n",
-    "                        batch_size=32)\n",
-    "    print(history)\n",
-    "    # Save the model after each training session to avoid losing progress\n",
-    "    model.save(model_path)\n",
-    "    print(\"Model saved to disk.\")\n",
-    "\n",
-    "    return model"
-   ],
-   "id": "f9347e97cfa1de0",
-   "outputs": [],
-   "execution_count": 16
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-12T15:32:10.270482Z",
-     "start_time": "2024-10-12T15:32:10.265181Z"
+     "end_time": "2024-10-17T16:06:16.095056Z",
+     "start_time": "2024-10-17T16:06:16.047880Z"
     }
    },
    "cell_type": "code",
    "source": "",
-   "id": "47019696734b90b3",
+   "id": "f9347e97cfa1de0",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T16:09:44.411892Z",
+     "start_time": "2024-10-17T16:08:58.238177Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from training.trainer import mt_train_n_test\n",
+    "\n",
+    "X, y = mt_train_n_test('4h', n_mt_ohlcv, model_input_lengths, batch_size=10)\n",
+    "X, y"
+   ],
+   "id": "47019696734b90b3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001B[92mDEBUG@\u001B[94m10-17.19:39:22:\u001B[92m\"'t_open' in RollingMeanStdOHLCV but not in data:open           float64\\nclose          float64\\nhigh           float64\\nlow            float64\\nvolume         float64\\npre_open       float64\\nmean_open      float64\\nstd_open       float64\\nn_open         float64\\npre_close      float64\\nmean_close     float64\\nstd_close      float64\\nn_close        float64\\npre_high       float64\\nmean_high      float64\\nstd_high       float64\\nn_high         float64\\npre_low        float64\\nmean_low       float64\\nstd_low        float64\\nn_low          float64\\npre_volume     float64\\nmean_volume    float64\\nstd_volume     float64\\nn_volume       float64\\ndtype: object\"\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   },
   {
    "metadata": {
@@ -370,7 +293,11 @@
     }
    },
    "cell_type": "code",
-   "source": "n_mt_ohlcv.index.dtypes\n",
+   "source": [
+    "from training.trainer import plot_mt_train_n_test\n",
+    "\n",
+    "plot_mt_train_n_test(X, y, n=1, base)\n"
+   ],
    "id": "11cbb99e2b29ee8c",
    "outputs": [
     {
@@ -405,109 +332,9 @@
    },
    "cell_type": "code",
    "source": [
-    "from datetime import timedelta\n",
-    "import numpy as np\n",
-    "from helper.data_preparation import pattern_timeframe, trigger_timeframe\n",
-    "from helper.importer import pt\n",
-    "import plotly.graph_objs as go\n",
+    "from training.trainer import mt_train_n_test\n",
     "\n",
-    "\n",
-    "def prepare_train_n_test(t_structure_timeframe, mt_ohlcv: pt.DataFrame[MultiTimeframeOHLCV], forecast_horizon: int = 20,\n",
-    "                         batch_size: int = 1000):\n",
-    "    \"\"\"\n",
-    "    Prepares input and output data for multi-step forecasting.\n",
-    "    \n",
-    "    Args:\n",
-    "        mt_ohlcv: \n",
-    "        t_structure_timeframe: \n",
-    "        df (pd.DataFrame): DataFrame containing 'high' and 'low' columns.\n",
-    "        window_size (int): Number of past time steps to use as input.\n",
-    "        forecast_horizon (int): Number of future time steps to predict.\n",
-    "        \n",
-    "    Returns:\n",
-    "        X (np.array): Input features.\n",
-    "        y (np.array): Output targets (high and low).\n",
-    "    \"\"\"\n",
-    "    pattern_tf = pattern_timeframe(t_structure_timeframe)\n",
-    "    trigger_tf = trigger_timeframe(t_structure_timeframe)\n",
-    "    double_tf = pattern_timeframe(trigger_timeframe(t_structure_timeframe))\n",
-    "\n",
-    "    structure_df = single_timeframe(mt_ohlcv, t_structure_timeframe)\n",
-    "    pattern_df = single_timeframe(mt_ohlcv, pattern_tf)\n",
-    "    trigger_df = single_timeframe(mt_ohlcv, trigger_tf)\n",
-    "    double_df = single_timeframe(mt_ohlcv, double_tf)\n",
-    "\n",
-    "    length_of_training = (\n",
-    "            model_input_lengths['structure'] * pd.to_timedelta(t_structure_timeframe)\n",
-    "            + model_input_lengths['pattern'] * pd.to_timedelta(pattern_tf)\n",
-    "            + model_input_lengths['trigger'] * pd.to_timedelta(trigger_tf)\n",
-    "            + model_input_lengths['double'] * pd.to_timedelta(double_tf)\n",
-    "    )\n",
-    "\n",
-    "    input_start = mt_ohlcv.index.get_level_values(\n",
-    "        level='date').min() + length_of_training * 2  # * 2 for simple safeside.\n",
-    "    input_end = mt_ohlcv.index.get_level_values(level='date').max() - forecast_horizon * pd.to_timedelta(\n",
-    "        trigger_tf)\n",
-    "    duration_seconds = (input_end - input_start) / timedelta(seconds=1)\n",
-    "\n",
-    "    X, y = {'double': [], 'trigger': [], 'pattern': [], 'structure': [], }, []\n",
-    "\n",
-    "    for relative_double_end in np.random.randint(0, duration_seconds, size=batch_size):\n",
-    "        double_end = input_end - relative_double_end * timedelta(seconds=1)\n",
-    "        trigger_end = double_end - model_input_lengths['double'] * pd.to_timedelta(double_tf)\n",
-    "        pattern_end = trigger_end - model_input_lengths['trigger'] * pd.to_timedelta(double_tf)\n",
-    "        structure_end = pattern_end - model_input_lengths['pattern'] * pd.to_timedelta(double_tf)\n",
-    "\n",
-    "        double_slice = double_df.loc[pd.IndexSlice[: double_end], :].iloc[-model_input_lengths['double']:]\n",
-    "        trigger_slice = trigger_df.loc[pd.IndexSlice[: trigger_end], :].iloc[-model_input_lengths['trigger']:]\n",
-    "        pattern_slice = pattern_df.loc[pd.IndexSlice[: pattern_end], :].iloc[-model_input_lengths['pattern']:]\n",
-    "        structure_slice = structure_df.loc[pd.IndexSlice[: structure_end], :].iloc[-model_input_lengths['structure']:]\n",
-    "\n",
-    "        X['double'].append(double_slice)\n",
-    "        X['trigger'].append(trigger_slice)\n",
-    "        X['pattern'].append(pattern_slice)\n",
-    "        X['structure'].append(structure_slice)\n",
-    "\n",
-    "        future_slice = trigger_df.loc[pd.IndexSlice[pattern_end:], :].iloc[:-model_input_lengths['pattern']]\n",
-    "        y.append(future_slice)\n",
-    "\n",
-    "        min_date = min(double_slice.index.get_level_values(level='date').min(),\n",
-    "                       trigger_slice.index.get_level_values(level='date').min(),\n",
-    "                       pattern_slice.index.get_level_values(level='date').min(),\n",
-    "                       structure_slice.index.get_level_values(level='date').min())\n",
-    "        max_date = max(double_slice.index.get_level_values(level='date').max(),\n",
-    "                       trigger_slice.index.get_level_values(level='date').max(),\n",
-    "                       pattern_slice.index.get_level_values(level='date').max(),\n",
-    "                       structure_slice.index.get_level_values(level='date').max())\n",
-    "\n",
-    "        # Create traces for each slice\n",
-    "        double_trace = go.Scatter(x=double_slice.index.get_level_values(level='date'), y=double_slice['value_column'],\n",
-    "                                  mode='lines', name='Double')\n",
-    "        trigger_trace = go.Scatter(x=trigger_slice.index.get_level_values(level='date'),\n",
-    "                                   y=trigger_slice['value_column'], mode='lines', name='Trigger')\n",
-    "        pattern_trace = go.Scatter(x=pattern_slice.index.get_level_values(level='date'),\n",
-    "                                   y=pattern_slice['value_column'], mode='lines', name='Pattern')\n",
-    "        structure_trace = go.Scatter(x=structure_slice.index.get_level_values(level='date'),\n",
-    "                                     y=structure_slice['value_column'], mode='lines', name='Structure')\n",
-    "\n",
-    "        # Create the layout\n",
-    "        layout = go.Layout(\n",
-    "            title='X Items and Double Slice Over Date Range',\n",
-    "            xaxis=dict(title='Date', range=[min_date, max_date]),\n",
-    "            yaxis=dict(title='Values'),\n",
-    "            showlegend=True\n",
-    "        )\n",
-    "\n",
-    "        # Combine all traces into a figure\n",
-    "        fig = go.Figure(data=[double_trace, trigger_trace, pattern_trace, structure_trace], layout=layout)\n",
-    "\n",
-    "        # Show the plot\n",
-    "        show_and_save_plot(fig)\n",
-    "        nop = 1\n",
-    "    return np.array(X), np.array(y)\n",
-    "\n",
-    "\n",
-    "a = prepare_train_n_test('4h', n_mt_ohlcv, 10)\n",
+    "a = mt_train_n_test('4h', n_mt_ohlcv, 10)\n",
     "a"
    ],
    "id": "c4fda4bf2a9b30c7",
