--- a/src/PreProcessing/gap_analysing/gap_injection.ipynb
+++ b/src/PreProcessing/gap_analysing/gap_injection.ipynb
@@ -1439,7 +1439,7 @@
     "    assert gaps_count == len(gaps_list)\n",
     "    if not found_gaps:\n",
     "        assert gaps_count == 0\n",
-    "    print(f\"timeframe:{timeframe} found {gaps_count} gaps: {gaps_list}\")\n",
+    "    log_d(f\"timeframe:{timeframe} found {gaps_count} gaps: {gaps_list}\")\n",
     "\n",
     "    "
    ],
