--- a/src/ai_modelling/cnn_lstd_model.ipynb
+++ b/src/ai_modelling/cnn_lstd_model.ipynb
@@ -452,10 +452,10 @@
     "    \n",
     "    if model is None:\n",
     "        if os.path.exists(model_path):\n",
-    "            print(\"Loading existing model from disk...\")\n",
+    "            log_d(\"Loading existing model from disk...\")\n",
     "            model = load_model(model_path)\n",
     "        else:\n",
-    "            print(\"Building new model...\")\n",
+    "            log_d(\"Building new model...\")\n",
     "            model = build_model(input_shapes)\n",
     "\n",
     "    # Train the model\n",
@@ -463,10 +463,10 @@
     "                        target_data,\n",
     "                        epochs=10,\n",
     "                        batch_size=32)\n",
-    "    print(history)\n",
+    "    log_d(history)\n",
     "    # Save the model after each training session to avoid losing progress\n",
     "    model.save(model_path)\n",
-    "    print(\"Model saved to disk.\")\n",
+    "    log_d(\"Model saved to disk.\")\n",
     "    \n",
     "    return model\n",
     "```"
