--- a/src/ai_modelling/prophet_model.ipynb
+++ b/src/ai_modelling/prophet_model.ipynb
@@ -158,7 +158,7 @@
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "mse = mean_squared_error(y_test, final_forecast)\n",
-    "print(f'Mean Squared Error: {mse}')\n",
+    "log_d(f'Mean Squared Error: {mse}')\n",
     "\n",
     "# 9. Visualize the Results\n",
     "import matplotlib.pyplot as plt\n",
