--- a/app/profit_loss/profit_loss_testing.ipynb
+++ b/app/profit_loss/profit_loss_testing.ipynb
@@ -14161,7 +14161,7 @@
    },
    "cell_type": "code",
    "source": [
-    "position_max_time = 3 * 4 * 4 * 4 * 4\n",
+    "position_max_time = 3 * 4 * 4 * 4 * 4 # 768 5mins = 64h = 2.66D\n",
     "action_delay = 2\n",
     "rolling_window = position_max_time - action_delay\n",
     "n2_data = data"
