--- a/app/ai_modelling/modelling/cnn_lstd_model.ipynb
+++ b/app/ai_modelling/modelling/cnn_lstd_model.ipynb
@@ -14,7 +14,7 @@
     "import pandas as pd\n",
     "\n",
     "from Config import config\n",
-    "from helper.helper import date_range_to_string\n",
+    "from helper.functions import date_range_to_string\n",
     "\n",
     "config.processing_date_range = date_range_to_string(start=pd.to_datetime('03-01-24'),\n",
     "                                                    end=pd.to_datetime('09-01-24'))\n",
