--- a/app/ai_modelling/training_data/PreProcessing/gap_analysing/gap_injection.ipynb
+++ b/app/ai_modelling/training_data/PreProcessing/gap_analysing/gap_injection.ipynb
@@ -20,7 +20,7 @@
     "from Config import config\n",
     "from data_processing.ohlcv import read_multi_timeframe_ohlcv\n",
     "from helper.data_preparation import single_timeframe\n",
-    "from helper.helper import date_range_to_string"
+    "from helper.functions import date_range_to_string"
    ],
    "outputs": [],
    "execution_count": 2
